# transcribation

Transcribation_copy/: pyproject.toml  requirements.txt
Transcribation_copy/src/: import.py  runner.py  test.py
Transcribation_copy/src/model/: model_service.py
Transcribation_copy/src/model/pipeline/: model.py
