[tool.poetry]
name = "transcribation"
version = "0.1.0"
description = ""
authors = ["IGazizov <IGazizov@synergy.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
